make edit more visible and fix spacing

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -39,6 +39,7 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: flex-start;
+	padding-right: 5%;
 }
 
 .garage__stats {
